fixed the transition for collapsing

--- a/client/style.css
+++ b/client/style.css
@@ -181,6 +181,9 @@ svg {
 .recipes-div {
   overflow: hidden;
   max-height: 0;
+}
+
+.recipes-div-transition {
   transition: max-height 0.3s ease-out;
 }
 
